force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/vlocity_ps__PremiseEventDirectory__c.object-meta.xml
<CustomObject>
    <label>Event Directory</label>
    <nameField>
        <label>Event Directory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Directory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>