force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__BroadcastAll__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BroadcastAll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broadcast All</label>
    <type>Checkbox</type>
</CustomField>