force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactEmail__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>