force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__ContactName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactName__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>