force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactPhone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>