force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__DisplayContactInformation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DisplayContactInformation__c</fullName>
    <label>Display Contact Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>