force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__DisplayTitle__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DisplayTitle__c</fullName>
    <label>Display Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>