force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__EndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EndDate__c</fullName>
    <label>Publish End Date</label>
    <type>Date</type>
</CustomField>