force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__PremiseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PremiseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premises</label>
    <referenceTo>vlocity_ps__Premises__c</referenceTo>
    <relationshipLabel>Event Directory</relationshipLabel>
    <relationshipName>EventDirectory</relationshipName>
    <type>Lookup</type>
</CustomField>