force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__Primary__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>