force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__ProgramType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramType__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>