force-app/main/default/objects/vlocity_ps__PremiseEventDirectory__c/fields/vlocity_ps__RichTextDescription__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RichTextDescription__c</fullName>
    <label>Rich Text Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>